Fixes issues with MenuBar and scrollbar...again...

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -108,6 +108,7 @@ body {
   font-style: normal;
   line-height: 1.5;
   letter-spacing: normal;
+  overflow: hidden;
 }
 
 small {
